--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: GrandExecutions
 version: '1.0'
 main: org.lepigslayer.grandExecutions.GrandExecutions
 api-version: '1.21'
+depend: [voicechat]
 commands:
-  toggledeath:
-    usage: toggleDeath
+  corpse:
+    usage: /corpse
